# occulus

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
ai-dev/: architecture.md  patterns.md  prompt-templates.md  spec.md
ai-dev/agents/: README.md  architect.md  gis_domain_expert.md  python_expert.md  qa_reviewer.md  technical_writer.md
ai-dev/decisions/: DL-001-template.md
ai-dev/guardrails/: README.md  coding-standards.md  data-handling.md  geospatial-compliance.md
ai-dev/skills/: README.md  project-skill.md
cpp/: CMakeLists.txt  build_ext.py
cpp/include/occulus/: features.hpp  filters.hpp  kdtree.hpp  normals.hpp  registration.hpp  segmentation.hpp
cpp/src/: bindings.cpp  features.cpp  filters.cpp  kdtree.cpp  normals.cpp  registration.cpp  segmentation.cpp
docs/: architecture.md  getting-started.md  index.md  release-notes.md
docs/api/: analysis.md  change.md  cli.md  colorize.md  copc.md  crs.md  export.md  features.md  filters.md  io.md  mesh.md  metrics.md  ml.md  normals.md  powerlines.md  raster.md  reference.md  registration.md  segmentation.md  tiling.md  types.md  viz.md
docs/guide/: cli.md  crs.md  export.md  tiling.md
examples/: README.md
examples/notebooks/: 01_getting_started.ipynb  02_kyfromabove_with_abovepy.ipynb  03_ground_classification.ipynb  04_registration_workflow.ipynb  05_forest_inventory.ipynb  06_urban_analysis.ipynb  07_mesh_reconstruction.ipynb  08_geometric_features.ipynb  09_international_data_guide.ipynb  10_change_detection.ipynb  11_abovepy_advanced.ipynb  12_complete_workflow.ipynb  13_crs_reprojection.ipynb  14_tiling_large_datasets.ipynb  15_volume_computation.ipynb  16_web_export.ipynb
examples/scripts/: _download.py  _plot_style.py  arizona_desert_terrain.py  batch_tile_processing.py  building_facade_registration.py  building_roof_planes.py  canopy_height_model.py  change_detection.py  coal_mine_terrain.py  colorado_rocky_mountain_terrain.py  cross_section_analysis.py  dbscan_urban_objects.py  dem_rasterization.py  flood_terrain_analysis.py  forest_inventory.py  full_als_workflow.py  global_fpfh_registration.py  ground_comparison_csf_pmf.py  houston_urban_density.py  icp_point_to_plane_demo.py  icp_point_to_point_demo.py  iran_fault_geomorphology.py  karst_topography.py  kentucky_ground_classification.py  kyfromabove_terrain_survey.py  landslide_monitoring.py  las_to_xyz_converter.py  louisiana_wetlands_delta.py  m3c2_change_detection.py  netherlands_ahn4_polder.py  oregon_coast_terrain.py  pacific_northwest_forest.py  pmf_ground_classification.py  powerline_detection.py  slope_aspect_analysis.py  tls_multi_scan_registration.py  tree_individual_segmentation.py  urban_building_detection.py  urban_terrain_model.py  usgs_3dep_icp_registration.py  (+1 more)
src/occulus/: __init__.py  __main__.py  _version.py  config.py  exceptions.py  types.py
src/occulus/_cpp/: __init__.py
src/occulus/analysis/: __init__.py  cross_section.py  volume.py
src/occulus/change/: __init__.py  m3c2.py
src/occulus/cli/: __init__.py  main.py
src/occulus/colorize/: __init__.py
src/occulus/crs/: __init__.py  transform.py
src/occulus/export/: __init__.py
src/occulus/features/: __init__.py
src/occulus/filters/: __init__.py
src/occulus/io/: __init__.py  copc.py  readers.py  writers.py
src/occulus/mesh/: __init__.py
src/occulus/metrics/: __init__.py
src/occulus/ml/: __init__.py
src/occulus/normals/: __init__.py
src/occulus/raster/: __init__.py  dem.py  export.py  interpolation.py
src/occulus/registration/: __init__.py  global_registration.py  icp.py
src/occulus/segmentation/: __init__.py  ground.py  objects.py  powerlines.py
src/occulus/tiling/: __init__.py
src/occulus/viz/: __init__.py
tests/: conftest.py  test_analysis.py  test_change.py  test_cli.py  test_config.py  test_crs.py  test_exceptions.py  test_features.py  test_filters.py  test_global_registration.py  test_io.py  test_io_mocked.py  test_metrics.py  test_normals.py  test_open3d_interop.py  test_powerlines.py  test_raster.py  test_registration.py  test_segmentation.py  test_types.py
