[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "occulus"
version = "1.1.0"
description = "Multi-platform point cloud analysis — registration, segmentation, meshing, and feature extraction"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Chris Lyons", email = "chris.lyons@ky.gov" },
]
keywords = [
    "point-cloud",
    "lidar",
    "3d",
    "registration",
    "segmentation",
    "mesh",
    "icp",
    "terrestrial-laser-scanning",
    "aerial-lidar",
    "uav",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pyproj>=3.6",
]

[project.scripts]
occulus = "occulus.cli.main:main"

[project.optional-dependencies]
las = ["laspy[lazrs]>=2.5"]
viz = ["open3d>=0.17", "matplotlib>=3.8"]
raster = ["rasterio>=1.3"]
copc = ["httpx>=0.27"]
web = ["py3dtiles>=7.0"]
ml = ["onnxruntime>=1.16"]
ml-torch = ["torch>=2.0", "onnxruntime>=1.16"]
all = ["occulus[las,viz,raster,copc,web]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "coverage>=7.0",
    "laspy[lazrs]>=2.5",
    "scipy>=1.11",
    "pyproj>=3.6",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-jupyter>=0.24",
]

[project.urls]
Homepage = "https://github.com/chrislyonsKY/occulus"
Documentation = "https://chrislyonsky.github.io/occulus/"
Repository = "https://github.com/chrislyonsKY/occulus"
Issues = "https://github.com/chrislyonsKY/occulus/issues"
Changelog = "https://github.com/chrislyonsKY/occulus/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Hatch build
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.sdist]
include = ["src/occulus"]

[tool.hatch.build.targets.wheel]
packages = ["src/occulus"]

# ---------------------------------------------------------------------------
# Ruff — linting and formatting
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"  # e.g. py311
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "T20",  # flake8-print — no print() in library code
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "RUF001",  # ambiguous unicode (en-dash, prime, degree — intentional in output)
    "RUF002",  # ambiguous unicode in docstrings
    "RUF003",  # ambiguous unicode in comments
    "N806",    # uppercase variable names (T for transforms, OUTPUTS for constants)
    "E501",    # line too long (formatter handles wrapping)
    "SIM117",  # nested with statements (readability preference)
    "RUF059",  # unused unpacked variable (e.g. _mask from SOR)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "T20"]
"examples/**/*.py" = ["T20", "N803"]
"src/occulus/_cpp/__init__.py" = ["F401"]  # C++ imports used when extension compiled

[tool.ruff.lint.isort]
known-first-party = ["occulus"]

# ---------------------------------------------------------------------------
# Mypy — strict type checking
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = false
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "occulus.types"
disable_error_code = ["attr-defined", "type-arg"]

[[tool.mypy.overrides]]
module = "occulus.segmentation.objects"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = [
    "laspy.*",
    "open3d.*",
    "occulus._cpp.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring real network access (deselect with '-m not integration')",
    "slow: full workflow tests",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["src/occulus"]
omit = ["tests/*", "examples/*", "src/occulus/_cpp/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
